--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
-    "ionic-angular": "3.9.2",
+    "ionic-angular": "3.9.6",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.4",
+    "@ionic/app-scripts": "3.2.4",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
